Read file fix